# saddle-pane

./: Cargo.toml  README.md  __data.json  index.html
.github/workflows/: ci.yaml
_app/: version.json
_app/immutable/chunks/: B6NON0yP.js  Bktdky1H.js  CWc2tx6N.js  D32kGIZ_.js  D_Hc36J4.js
_app/immutable/entry/: app.BYI0ztIv.js  start.CySPcxm1.js
_app/immutable/nodes/: 0.Dvfiu2FB.js  1.DtweeQhk.js  2.B_Kdyyx8.js  3.B78yW2Kl.js  4.DCsMruwd.js
crates/bevy_iconify/: Cargo.toml
crates/bevy_iconify/src/: attrs.rs  cache.rs  lib.rs  suggest.rs  svg.rs
crates/bevy_iconify/tests/: bench_suggest.rs  integration.rs
crates/bevy_iconify_image/: Cargo.toml
crates/bevy_iconify_image/src/: lib.rs
crates/bezier/: Cargo.toml
crates/bezier/src/: lib.rs
crates/bezier/src/style/: bezier.css
crates/button-grid/: Cargo.toml
crates/button-grid/src/: lib.rs
crates/button-grid/src/style/: button_grid.css
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/file/: Cargo.toml
crates/file/src/: lib.rs
crates/file/src/style/: file.css
crates/interval/: Cargo.toml
crates/interval/src/: lib.rs
crates/interval/src/style/: interval.css
crates/radio-grid/: Cargo.toml
crates/radio-grid/src/: lib.rs
crates/radio-grid/src/style/: radio_grid.css
crates/vector2/: Cargo.toml
crates/vector2/src/: lib.rs
crates/vector2/src/style/: vector2.css
demo/basic/: index.html
demo/bouncing-balls/: index.html
demo/game-debug/: index.html
demo/lab/: index.html
demos/basic/: index.html
demos/bouncing-balls/: index.html
demos/game-debug/: index.html
docs/: architecture.md  configuration.md  plugin-development.md  plugin-usage.md
docs/architecture/: __data.json  index.html
docs/configuration/: __data.json  index.html
docs/plugin-development/: __data.json  index.html
docs/plugin-usage/: __data.json  index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/bouncing-balls/: Cargo.toml
examples/bouncing-balls/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/game-debug/: Cargo.toml
examples/game-debug/src/: main.rs
examples/lab/: Cargo.toml
examples/lab/src/: main.rs
examples/lab/src/scenarios/: mod.rs
src/: binding.rs  builder.rs  builder_tests.rs  events.rs  handle.rs  icons.rs  layout.rs  lib.rs  params.rs  plugin.rs  registry.rs  search.rs  store.rs  store_tests.rs  sync.rs  theme.rs  ux.rs
src/controls/: button.rs  color.rs  color_picker.rs  editing.rs  mod.rs  monitor.rs  number.rs  scroll.rs  select.rs  separator.rs  slider.rs  text.rs  toggle.rs
src/style/: button.css  color.css  color_picker.css  color_picker.wgsl  folder.css  mod.rs  monitor.css  number.css  pane.css  scrollbar.css  select.css  select_popup.css  separator.css  slider.css  tab.css  text.css  toggle.css  tokens.css
src/style/themes/: dark.css
