[package]
name = "saddle-pane-derive"
version = "0.1.0"
edition = "2024"
publish = false
description = "Derive macro for saddle-pane"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
