[package]
name = "saddle-pane-file"
version = "0.1.0"
edition = "2024"
publish = false
description = "File loader plugin for saddle-pane"

[dependencies]
bevy = "0.18"
bevy_flair = "0.7"
bevy_ui_widgets = "0.18"
saddle-pane = { path = "../.." }
rfd = "0.15"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
