[package]
name = "saddle-pane-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["brp"]
brp = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["bevy_remote", "serialize"] }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
bevy_enhanced_input = { workspace = true }
saddle-pane = { workspace = true, features = ["serialize"] }
saddle-pane-interval = { path = "../../crates/interval" }
saddle-pane-button-grid = { path = "../../crates/button-grid" }
saddle-pane-radio-grid = { path = "../../crates/radio-grid" }
saddle-pane-vector2 = { path = "../../crates/vector2" }
saddle-pane-bezier = { path = "../../crates/bezier" }
saddle-pane-file = { path = "../../crates/file" }
saddle-pane-example-common = { path = "../common" }
image = "0.25"

[lints]
workspace = true
